Modifiche accesso pagine film

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/cinema
 spring.datasource.username=postgres
-spring.datasource.password=312001
+spring.datasource.password=kvitravn
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
 #==================================
-server.port=8083
+server.port=8082
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 #==================================
