--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/cinema
 spring.datasource.username=postgres
-spring.datasource.password=kvitravn
+spring.datasource.password=312001
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #==================================
 # = Web server
 #==================================
-server.port=8082
+server.port=8083
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 #==================================
@@ -28,3 +28,8 @@ spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
+#==================================
+# = Messages configuration
+#==================================
+spring.messages.basename=messages/messages
+spring.messages.encoding=ISO-8859-1
