--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#==================================
 # = Datasource (non caricare la password)
 #==================================
 spring.jpa.database=POSTGRESQL
@@ -10,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/cinema
 spring.datasource.username=postgres
-spring.datasource.password=312001
+spring.datasource.password=kvitravn
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -21,6 +22,16 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=8084
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
+#==================================
+# = Thymeleaf configurations
+#==================================
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
 #==================================
 # = Messages configuration
 #==================================
