Modifiche per AWS (e correzione bug)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,12 @@ logging.level.org.hibernate.SQL=trace
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/cinema
+#spring.datasource.url=jdbc:postgresql://localhost/cinema
+spring.datasource.url=jdbc:postgresql://cinema-siw.cxtnpmdhd7gj.eu-central-1.rds.amazonaws.com/cinemaSiw
+#spring.datasource.username=postgres
 spring.datasource.username=postgres
-spring.datasource.password=kvitravn
+#spring.datasource.password=kvitravn
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -19,9 +22,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #==================================
 # = Web server
 #==================================
-server.port=8084
-server.error.whitelabel.enabled=false
-server.error.include-stacktrace=always
+#server.port=8084
+#server.error.whitelabel.enabled=false
+#server.error.include-stacktrace=always
 #==================================
 # = Thymeleaf configurations
 #==================================
