--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/cinema
 spring.datasource.username=postgres
-spring.datasource.password=kvitravn
+spring.datasource.password=Valerio7
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -19,7 +19,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #==================================
 # = Web server
 #==================================
-server.port=8084
+server.port=8081
 server.error.whitelabel.enabled=false
 server.error.include-stacktrace=always
 #==================================
